plugins {
    id 'java'
    id 'application'
}
application {
    mainClass = 'org.alphatilesapps.validator.Validator'
}

run {
    standardInput = System.in
    timeout = Duration.ofMinutes(25)
}

dependencies{
    implementation 'com.google.api-client:google-api-client:2.0.0'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
    implementation 'com.google.apis:google-api-services-sheets:v4-rev20220927-2.0.0'
    implementation 'com.google.apis:google-api-services-drive:v3-rev20220815-2.0.0'
}
java {
    sourceCompatibility = JavaVersion.VERSION_15
    targetCompatibility = JavaVersion.VERSION_15
}